Geometry Nodes: Show Overlays and Wire Colors Bug, Resets to Default. #92446

Closed
opened 2021-10-24 08:54:53 +02:00 by Lloyd · 8 comments

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-23 20:02, hash: 8c21667f3ca7
Worked: -

Short description of error
Show Overlays and Wire Colors in the Geometry Nodes Editor resets when another Object is selected.

Exact steps for others to reproduce the error
Disable Show Overlays or Wire Colors in the Toolbar, select another Object, come back to Object, Show Overlays or Wire Colors are back on.

**Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-23 20:02, hash: `8c21667f3ca7` Worked: - **Short description of error** Show Overlays and Wire Colors in the Geometry Nodes Editor resets when another Object is selected. **Exact steps for others to reproduce the error** Disable Show Overlays or Wire Colors in the Toolbar, select another Object, come back to Object, Show Overlays or Wire Colors are back on.
Author

Added subscriber: @LloydAlmeida

Added subscriber: @LloydAlmeida

#92465 was marked as duplicate of this issue

#92465 was marked as duplicate of this issue

Added subscribers: @pablovazquez, @dfelinto

Added subscribers: @pablovazquez, @dfelinto

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Interesting bug, thanks for the report.

Interesting bug, thanks for the report.

This issue was referenced by 1ecb4e6fd8

This issue was referenced by 1ecb4e6fd8fcde581c8d79d9750a147361fa6915
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-10-25 11:31:06 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Thomas Dinges added this to the 3.0 milestone 2023-02-08 15:58:49 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92446
No description provided.